--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.5)
 project(raft_away VERSION 1.0)
 
 # raylib
@@ -25,6 +25,18 @@ if (NOT raylib_cpp_FOUND)
     FetchContent_MakeAvailable(raylib_cpp)
 endif()
 
+# tmx
+find_package(tmx QUIET)
+if (NOT tmx_FOUND)
+    include(FetchContent)
+    FetchContent_Declare(
+        tmx
+        GIT_REPOSITORY https://github.com/baylej/tmx.git
+        GIT_TAG tmx_1.4.0
+    )
+    FetchContent_MakeAvailable(tmx)
+endif()
+
 # This is the main part:
 set(SOURCES 
     main.cpp 
@@ -39,6 +51,12 @@ target_include_directories(${PROJECT_NAME}
     scenes/mainscene
 )
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 11)
-target_link_libraries(${PROJECT_NAME} PUBLIC raylib raylib_cpp)
+target_link_libraries(${PROJECT_NAME} PUBLIC raylib raylib_cpp tmx ZLIB LibXml2 Iconv xz)
+
+# Copy the resources
+file(GLOB resources resources/*)
+set(test_resources)
+list(APPEND test_resources ${resources})
+file(COPY ${test_resources} DESTINATION "resources/")
 
 # That's it! You should have an example executable that you can run. Have fun!
