--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -54,7 +54,7 @@ jobs:
       run: |
         echo "build-output-dir=${{ github.workspace }}/build" >> "$GITHUB_OUTPUT"
 
-    if (${{ matrix.os }} == 'ubuntu-latest'):
+    if: ${{ ${{ matrix.os }} == 'ubuntu-latest' }}
       - name: Install dependencies
         shell: bash
         run: |
