--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake ..
+        cmake -G "Unix Makefile" ..
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
