--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -28,7 +28,7 @@ jobs:
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: |
         cd build
-        make -static-libstdc++
+        make -std=c++17
 
     - name: Upload raft_away.exe
       uses: actions/upload-artifact@v3
