Check CMake version

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -22,6 +22,7 @@ jobs:
       run: |
         mkdir build
         cd build
+        cmake --version
         cmake -G "MinGW Makefiles" ..
 
     - name: Build
