--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -16,11 +16,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up MinGW
-      uses: egor-tensin/setup-mingw@v2
-      with:
-        platform: x64
-
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
@@ -28,13 +23,13 @@ jobs:
         mkdir build
         cd build
         cmake --version
-        cmake -G "MinGW Makefiles" ..
+        cmake -G "NMake Makefiles" ..
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: |
         cd build
-        make
+        nmake
 
     - name: Upload raft_away.exe
       uses: actions/upload-artifact@v3
