--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -10,14 +10,11 @@ on:
 
 jobs:
   build-windows:
-    name: Build on Windows
-    runs-on: windows-latest
+    name: Build on Linux
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-
-    - name: Add msbuild to PATH
-      uses: microsoft/setup-msbuild@v1.1
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -26,16 +23,16 @@ jobs:
         mkdir build
         cd build
         cmake --version
-        cmake -G "Visual Studio 17 2022" ..
+        cmake ..
 
     - name: Build
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: |
         cd build
-        msbuild INSTALL.vcxproj
+        make
 
-    - name: Upload raft_away.exe
+    - name: Upload raft_away
       uses: actions/upload-artifact@v3
       with:
-        name: Raft Away Windows
-        path: ./build/raft_away.exe
+        name: Raft Away Linux
+        path: ./build/raft_away
