--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Dependencies
       run: |
         sudo apt update
-        sudo apt install libxrandr-dev libxinerama-dev
+        sudo apt install libxrandr-dev libxinerama-dev libxcursor-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
